# DTTS

./: .gitignore  .gitmodules  Arduino Nano Test.postman_collection.json  README.md  requirements.txt  safety.md
Arduino Server/: .gitignore  platformio.ini
Arduino Server/src/: main.cpp
Arduino_Server_old/: Arduino_Server.ino
Arduino_Server_old/src/esc/: esc.cpp  esc.h
frontend/: CMakeLists.txt  imgui.ini  main.cpp
frontend/.cache/clangd/index/: context.c.AC8F1FE7A954F4F6.idx  egl_context.c.AB6FFAFBD999BED1.idx  examples.cpp.CCCC51FEE717BB6F.idx  glfw3.h.8574E4FC0313206F.idx  glfw3native.h.608B9DB43DBB3F2B.idx  glx_context.c.5D1D81299D803FD1.idx  imconfig.h.43A6D4748BA499A9.idx  imgui.cpp.A32192536F1A171D.idx  imgui.h.4825050D5F507B98.idx  imgui_demo.cpp.D3743A3A350D8785.idx  imgui_draw.cpp.E273E4008FEF9C31.idx  imgui_impl_glfw.cpp.4F542212359C2B91.idx  imgui_impl_glfw.h.DA30298770E691F3.idx  imgui_impl_opengl3.cpp.300AB207B27A3EE2.idx  imgui_impl_opengl3.h.A863AF0E417DD471.idx  imgui_impl_opengl3_loader.h.31FCDFF3C28ED421.idx  imgui_internal.h.3CA10ED699AA6DEF.idx  imgui_tables.cpp.9367C3304FB4DA0A.idx  imgui_widgets.cpp.06AA19D6C628D9D9.idx  imstb_rectpack.h.2D752475EA22CE6D.idx  imstb_textedit.h.2413E3E2D3FE8FBA.idx  imstb_truetype.h.4E2FDBB2A3FF2B84.idx  init.c.1C99A983DF4127D1.idx  input.c.55873532BF998FEA.idx  internal.h.82FBDFEF43BE26AF.idx  linux_joystick.c.90199A18CFB449EA.idx  linux_joystick.h.BE9FB1E2DD8AD777.idx  main.cpp.493DBB5D832667B0.idx  mappings.h.F5FC4B6BE7E5EA19.idx  monitor.c.E0CB8F6C025DB10F.idx  null_init.c.62C6519D81B0F81D.idx  null_joystick.c.FEFF7B3994D83329.idx  null_joystick.h.E7617A2BAC6DD461.idx  null_monitor.c.D8F55996AFE180FA.idx  null_platform.h.C4120FCC240210B1.idx  null_window.c.E641A2351052A742.idx  osmesa_context.c.379B336009E15B08.idx  platform.c.A079A805E2340208.idx  platform.h.B15FA607DF5FE33E.idx  posix_module.c.43139413CC67995E.idx  (+18 more)
src/: components.py  desig_esc_profile.py  main.py
src/profiles/: gradual_ramp.csv  interesting.csv  sin.csv  step_ramp.csv  step_ramp_invert.csv
